# Chaospace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Chaospace.sh  Davidentregable.cpp  LICENSE  Makefile  MiJuego  PowerUps y balas  README  README.md  clean_and_build.sh  cmake_install.cmake  main.cpp  prueba de git.txt  run.sh
include/: config.h
modulos/: CMakeLists.txt  Makefile  mimodulo.cpp  mimodulo.h
plantilla-sfml/__MACOSX/: ._plantilla-sfml
plantilla-sfml/plantilla-sfml/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  leeme.md  main.cpp  prueba
resources/SPRITES NUESTROS/Bosses/: LEEME.txt
resources/SPRITES NUESTROS/Enemigos/: LEEME.txt
resources/maps/mapa1/: mapa1.tmx  mapa4.tmx
resources/maps/mapa2/: mapa.tmx  mapa1.tmx  mapa3.tmx
sources/: CMakeLists.txt  Clock.h  Externs.h  Game.cpp  Game.h  LevelMaker.h  Makefile  Map.cpp  Map.h  cmake_install.cmake
sources/Components/: Physics.cpp  Physics.h
sources/GUI/: Hud.cpp  Hud.h
sources/GameObjects/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  EmptyAnimation.cpp  EmptyAnimation.h  GameObject.cpp  GameObject.h  Npc.cpp  Npc.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Ship.cpp  Ship.h  weapons.h
sources/Menus/: ControlMenu.h  FinalMenu.h  MainMenu.h  Menu.cpp  Menu.h  TransitionMenu.h
sources/Physics/: Physics.cpp  Physics.h
sources/Render/: Render.cpp  Render.h
sources/State/: ControlState.cpp  ControlState.h  FinalState.cpp  FinalState.h  LevelMaker.cpp  MenuState.cpp  MenuState.h  NextLevelState.cpp  NextLevelState.h  PlayState.cpp  PlayState.h  State.h  TestState.cpp  TestState.h
sources/headers/: GameObject.h
sources/src/: GameObject.cpp
